# miniGPU

./: .gitignore  README.md  build_dragon.sh  build_spirv2llvm  build_teapot.sh  dragon.cpp  teapot.cpp  teapot_pipeline.cpp  teapot_spirv  teapot_spirv.cpp  teapot_tex  teapot_tex.cpp
backend/: BUILD.md
backend/ToyGPU/: ToyGPUAsmPrinter.cpp  ToyGPUInstrInfo.cpp  ToyGPURegisterInfo.cpp  ToyGPURegisterInfo.h  ToyGPUSubtarget.cpp  ToyGPUSubtarget.h  ToyGPUTargetMachine.cpp  (+1 more)
compiler/: toyasm.py
compiler/backend/ToyGPU/: CMakeLists.txt  ToyGPU.h  ToyGPU.td  ToyGPUFrameLowering.cpp  ToyGPUFrameLowering.h  ToyGPUISelDAGToDAG.cpp  ToyGPUISelLowering.cpp  ToyGPUISelLowering.h  ToyGPUInstrInfo.h  ToyGPUInstrInfo.td  ToyGPURegisterInfo.td
compiler/backend/ToyGPU/MCTargetDesc/: CMakeLists.txt  ToyGPUInstPrinter.cpp  ToyGPUInstPrinter.h  ToyGPUMCTargetDesc.cpp  ToyGPUMCTargetDesc.h
compiler/backend/ToyGPU/TargetInfo/: ToyGPUTargetInfo.cpp
docs/: glsl-guide.md  intro-to-graphics-05-07.md  llvm-cpp-guide.md
gl/: gl.cpp  gl.h
gpu/: rasterizer.cpp  rasterizer.h  shader_core.cpp  shader_core.h  vertex_stage.cpp  vertex_stage.h  zbuffer.h
gpu3d/: renderer3d.cpp  renderer3d.h  texture.cpp  texture.h
host/: math3d.h  mesh.h
pipeline/: build_pipeline.sh  fragment_stage.cpp  fragment_stage.h  framebuffer.cpp  framebuffer.h  mesh.cpp  vertex_stage.cpp  vertex_stage.h
shaders/: frag.glsl  gradient.s  light.frag  mvp.vert  vertex.s
shaders3d/: mvp.vert
spirv2llvm/: main.cpp
tests/: check_pixels.py  test_shader_core.cpp
toyasm/: toyasm.py
toygl/: toygl.cpp  toygl.h
(+7 files in other folders)
